--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -218,6 +218,11 @@ md-toast {
 
 /* Planning Page */
 
+.history-filter {
+	width: 100%;
+	padding: 0 20px;
+}
+
 .history-toolbar-header {
 	margin-top: 12px;
 	background-color:material-color('cyan', '300') !important;
