fixed home butotn bug, pre-pricing schema

--- a/modules/core/client/views/history.client.view.html
+++ b/modules/core/client/views/history.client.view.html
@@ -1,5 +1,5 @@
 <section>
-	<div layout="row" layout-align="space-around">
+	<div layout="row" layout-align="center">
 
 		<!-- History Filters -->
 		<div flex="25" layout="column" layout-align="start start">
@@ -23,6 +23,9 @@
 				</md-select>
 			</div>
 		</div>
+
+		<!-- Gap -->
+		<div flex="5"></div>
 
 		<!-- History List -->
 		<div flex="60" layout="column" layout-align="start center">
