--- a/modules/prices/client/views/prices.client.view.html
+++ b/modules/prices/client/views/prices.client.view.html
@@ -1,7 +1,7 @@
 <section>
 	<div layout="column">
 		<div layout="column" layout-align="center center">
-			<h1>Live Pricing <span class="unbold">/ ComEd</span></h1>
+			<h1>Live Prices <span class="unbold">/ ComEd</span></h1>
 			<md-select class="pricing-date-select" ng-model="date">
 				<md-select-label>{{date | momentToDate}}</md-select-label>
 				<md-option ng-repeat="dateOption in dateOptions" ng-value="dateOption">{{dateOption | momentToDate}}</md-option>
