--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -20,12 +20,12 @@
   </div>
   <!-- Show when no User present -->
   <md-tabs class="md-primary" md-selected="tabIndex" ng-show="!authentication.user">
-    <md-tab ui-sref="electricity" label="Electricity Pricing"></md-tab>
+    <md-tab ui-sref="prices" label="Electricity Prices"></md-tab>
   </md-tabs>
   <!-- Show when User present -->
   <md-tabs class="md-primary" md-selected="tabIndex" ng-show="authentication.user">
     <md-tab ui-sref="planning" label="Charge Planning"></md-tab>
     <md-tab ui-sref="history" label="Vehicle History"></md-tab>
-    <md-tab ui-sref="electricity" label="Electricity Pricing"></md-tab>
+    <md-tab ui-sref="prices" label="Electricity Prices"></md-tab>
   </md-tabs>
 </md-toolbar>
