--- a/modules/core/client/views/learn.client.view.html
+++ b/modules/core/client/views/learn.client.view.html
@@ -3,11 +3,11 @@
 		<div layout="column" class="hero-main md-primary">
 			<h1>5 Minutes for a Better Future</h1>
 			<span>
-				That's all it takes to optimize your charge schedule, minimize your impact to the grid, and save emissions, time, and money...
+				That's all it takes to optimize your charge schedule and minimize your grid footprint
 			</span>
 			<p>
-				Every night thousands of electric vehicle drivers plug in when they get home.  Without a proper planning schedule, they could be subject to price spikes of up to 400%!  We've built a tool that helps you avoid those nasty spikes and minimize the environmental impact of your vehicle :)
+				Every night thousands of electric vehicle drivers plug in when they get home.  Without a proper planning schedule, they could be subject to price spikes of up to 500%!  We've built a tool that helps you avoid those nasty spikes and reduce the environmental impact of your vehicle :)
 			</p>
-		</div>git
+		</div>
 	</div>
 </section>
