--- a/modules/vehicles/client/views/planning.client.view.html
+++ b/modules/vehicles/client/views/planning.client.view.html
@@ -1,6 +1,7 @@
 <section >
 	<div layout="column" layout-align="center center">
 		<h1>Overnight Charging Schedule</h1>
+		<h2 class="unbold light-gray subheader">Tesla Model S</h2>
 		<div layout="row" layout-align="center" class="charge-circle-array">
 			
 			<div ng-repeat="setting in chargeSettings" layout="column" layout-align="top" class="charge-circle-container">
