--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -29,6 +29,13 @@
 h1, h2, h3, h4, h5, h6 {
   margin: 0; }
 
+.subheader {
+  margin-top: 8px; }
+
+.light-gray {
+  color: #616161;
+  color: rgba(0, 0, 0, 0.54); }
+
 .gap {
   width: 24px; }
 
@@ -75,81 +82,6 @@ md-toast {
     margin-top: 16px;
     margin-bottom: 0;
     color: #f44336; }
-
-/* Planning Page */
-.charge-circle-array {
-  margin-top: 50px; }
-
-.charge-circle-container {
-  width: 130px;
-  height: 220px; }
-
-.charge-circle-day {
-  text-align: center; }
-  .charge-circle-day md-switch {
-    margin-top: 7px;
-    margin-left: 15px;
-    margin-bottom: 15px; }
-
-.charge-circle {
-  height: 150px;
-  cursor: pointer; }
-  .charge-circle md-progress-circular {
-    margin-top: -95px; }
-  .charge-circle .charge-circle-label {
-    margin-top: 47px;
-    margin-left: 1px;
-    width: 80px;
-    text-align: center; }
-    .charge-circle .charge-circle-label span {
-      font-size: 22px;
-      font-weight: bold; }
-      .charge-circle .charge-circle-label span span {
-        font-weight: normal;
-        font-size: 10px; }
-    .charge-circle .charge-circle-label hr {
-      margin-top: 0;
-      margin-bottom: 0;
-      width: 50px;
-      height: 2px;
-      border: 0;
-      background-color: #d4e157; }
-    .charge-circle .charge-circle-label p {
-      margin-top: -2px;
-      margin-bottom: 0;
-      font-size: 14px; }
-
-.charge-circle:hover {
-  box-shadow: 0 8px 17px rgba(0, 0, 0, 0.2); }
-  .charge-circle:hover .charge-circle-edit-label {
-    color: #ec407a; }
-
-.charge-circle-edit-label {
-  color: white;
-  font-size: 14px;
-  margin-bottom: 5px;
-  transition: 0.2s linear all; }
-
-.planning-save {
-  color: white !important;
-  margin-top: 20px;
-  padding: 8px 40px; }
-
-/* Planning Dialog */
-.planning-dialog md-content {
-  height: 280px; }
-.planning-dialog .charge-time-selector-container {
-  margin-bottom: 24px; }
-.planning-dialog .charge-time-selector {
-  font-size: 24px;
-  margin-top: 0;
-  color: #00bcd4; }
-  .planning-dialog .charge-time-selector md-select {
-    margin-bottom: 24px; }
-.planning-dialog .charge-target-slider-container md-slider {
-  width: 500px; }
-.planning-dialog .charge-target-slider-container h2:nth-child(3) {
-  color: #00bcd4; }
 
 /* History Page */
 .history-filter {
