--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -5,8 +5,8 @@
 			<span>
 				be smart > get efficient > save the planet
 			</span>
-			<div class="hero-buttons" layout="row">
-					<md-button ng-click="homeRegister($event)" class="md-raised md-primary">Get Started</md-button>
+			<div class="hero-buttons" layout-gt-sm="row" layout-sm="column">
+				<md-button ng-click="getStarted($event)" class="md-raised md-primary">Get Started</md-button>
 				&nbsp&nbsp&nbsp
 				<md-button ui-sref="learn" class="md-raised md-accent">Learn More</md-button>
 				&nbsp&nbsp&nbsp
