--- a/modules/users/client/dialogs/views/sign_in.dialog.client.view.html
+++ b/modules/users/client/dialogs/views/sign_in.dialog.client.view.html
@@ -6,7 +6,7 @@
 				<h2>Sign In</h2>
 				<h4 class="unbold">welcome back</h4>
 				<form ng-submit="dialogSignIn()" novalidate class="sign-in-form">
-					<div layout="row" layout-align="space-around">
+					<div layout-sm="column" layout-gt-sm="row" layout-align-sm="center center" layout-align-gt-sm="space-around">
 						<md-input-container>
 						  <label>Email Address</label>
 						  <input type="text" ng-model="credentials.email">
