--- a/modules/users/client/scss/users.scss
+++ b/modules/users/client/scss/users.scss
@@ -1,7 +1,6 @@
 /* Register Dialog */
 
 .register-dialog {
-
 	h4 {
 		margin-top: 4px;
 		color: #616161;
@@ -19,6 +18,29 @@
 	md-input-container {
 		width: 260px;
 		padding: 12px 14px;
+	}
+}
+
+@media (max-width: 600px) {
+	.register-dialog {
+		.sticky-container {
+			padding-top: 0px;
+		}
+
+		form {
+			margin-top: 0 !important;
+		}
+
+		md-content {
+			height: 344px;
+		}
+
+		md-input-container {
+			padding-top: 0px;
+			padding-bottom: 2px;
+			width: 115%;
+		}
+
 	}
 }
 
@@ -43,5 +65,20 @@
 	md-input-container {
 		width: 260px;
 		padding: 12px 14px;
+	}
+}
+
+@media (max-width: 600px) {
+	.sign-in-dialog {
+
+		md-content {
+			height: 240px;
+		}
+
+		md-input-container {
+			padding-top: 0px;
+			padding-bottom: 2px;
+			width: 115%;
+		}
 	}
 }
