--- a/modules/core/client/views/history.client.view.html
+++ b/modules/core/client/views/history.client.view.html
@@ -1,5 +1,5 @@
 <section>
-	<div layout="row" layout-align="center">
+	<div layout-sm="column" layout-gt-sm="row" layout-align="center">
 
 		<!-- History Filters -->
 		<div flex="25" layout="column" layout-align="start start">
