--- a/modules/users/client/scss/users.scss
+++ b/modules/users/client/scss/users.scss
@@ -24,7 +24,7 @@
 @media (max-width: 600px) {
 	.register-dialog {
 		.sticky-container {
-			padding-top: 0px;
+			padding-top: 0;
 		}
 
 		form {
@@ -36,7 +36,7 @@
 		}
 
 		md-input-container {
-			padding-top: 0px;
+			padding-top: 0;
 			padding-bottom: 2px;
 			width: 115%;
 		}
@@ -72,11 +72,11 @@
 	.sign-in-dialog {
 
 		md-content {
-			height: 240px;
+			height: 344px;
 		}
 
 		md-input-container {
-			padding-top: 0px;
+			padding-top: 0;
 			padding-bottom: 2px;
 			width: 115%;
 		}
