--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <!-- Show when no User present -->
-  <md-tabs md-center-tabs="true" class="md-primary" md-selected="tabIndex" ng-show="!authentication.user">
+  <md-tabs class="md-primary" md-selected="tabIndex" ng-show="!authentication.user">
     <md-tab ui-sref="home" label="Home"></md-tab>
     <md-tab ui-sref="prices" label="Electricity Prices"></md-tab>
   </md-tabs>
