--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -25,7 +25,7 @@
     <md-tab ui-sref="prices" label="Electricity Prices"></md-tab>
   </md-tabs>
   <!-- Show when User present -->
-  <md-tabs md-center-tabs="true" class="md-primary" md-selected="tabIndex" ng-show="authentication.user">
+  <md-tabs class="md-primary" md-selected="tabIndex" ng-show="authentication.user">
     <md-tab ui-sref="home" label="Home"></md-tab>
     <md-tab ui-sref="planning" label="Charge Planning"></md-tab>
     <md-tab ui-sref="history" label="Vehicle History"></md-tab>
