reverted to angular-material 8.3

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -21,7 +21,7 @@
   </div>
   <!-- Show when no User present -->
   <md-tabs class="md-primary" md-selected="tabIndex" ng-show="!authentication.user">
-    <md-tab ui-sref="home" label="Home"></md-tab>
+    <md-tab href="home" label="Home"></md-tab>
     <md-tab ui-sref="prices" label="Electricity Prices"></md-tab>
   </md-tabs>
   <!-- Show when User present -->
