--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -1,45 +1,53 @@
 /* Register Dialog */
-.register-dialog h4 {
-  margin-top: 4px;
-  color: #616161;
-  color: rgba(0, 0, 0, 0.54); }
-.register-dialog md-content {
-  height: 280px; }
-.register-dialog .register-form {
-  margin-top: 8px; }
-.register-dialog md-input-container {
-  width: 260px;
-  padding: 12px 14px; }
+.register-dialog {
+  height: 402px; }
+  .register-dialog h4 {
+    margin-top: 4px;
+    color: #616161;
+    color: rgba(0, 0, 0, 0.54); }
+  .register-dialog md-content {
+    height: 280px; }
+  .register-dialog .register-form {
+    margin-top: 8px; }
+  .register-dialog md-input-container {
+    width: 260px;
+    padding: 12px 14px; }
 
 @media (max-width: 600px) {
-  .register-dialog .sticky-container {
-    padding-top: 0; }
-  .register-dialog form {
-    margin-top: 0 !important; }
-  .register-dialog md-content {
-    height: 344px; }
-  .register-dialog md-input-container {
-    padding-top: 0;
-    padding-bottom: 2px;
-    width: 115%; } }
+  .register-dialog {
+    height: 455px; }
+    .register-dialog .sticky-container {
+      padding-top: 0; }
+    .register-dialog form {
+      margin-top: 0 !important; }
+    .register-dialog md-content {
+      height: 344px; }
+    .register-dialog md-input-container {
+      padding-top: 0;
+      padding-bottom: 2px;
+      width: 115%; } }
 
 /* Sign In Dialog */
-.sign-in-dialog h4 {
-  margin-top: 4px;
-  color: #616161;
-  color: rgba(0, 0, 0, 0.54); }
-.sign-in-dialog md-content {
-  height: 200px; }
-.sign-in-dialog .sign-in-form {
-  margin-top: 8px; }
-.sign-in-dialog md-input-container {
-  width: 260px;
-  padding: 12px 14px; }
+.sign-in-dialog {
+  height: 322px; }
+  .sign-in-dialog h4 {
+    margin-top: 4px;
+    color: #616161;
+    color: rgba(0, 0, 0, 0.54); }
+  .sign-in-dialog md-content {
+    height: 200px; }
+  .sign-in-dialog .sign-in-form {
+    margin-top: 8px; }
+  .sign-in-dialog md-input-container {
+    width: 260px;
+    padding: 12px 14px; }
 
 @media (max-width: 600px) {
-  .sign-in-dialog md-content {
-    height: 344px; }
-  .sign-in-dialog md-input-container {
-    padding-top: 0;
-    padding-bottom: 2px;
-    width: 115%; } }
+  .sign-in-dialog {
+    height: 455px; }
+    .sign-in-dialog md-content {
+      height: 344px; }
+    .sign-in-dialog md-input-container {
+      padding-top: 0;
+      padding-bottom: 2px;
+      width: 115%; } }
