--- a/modules/users/client/scss/users.scss
+++ b/modules/users/client/scss/users.scss
@@ -1,6 +1,8 @@
 /* Register Dialog */
 
 .register-dialog {
+	height: 402px;
+
 	h4 {
 		margin-top: 4px;
 		color: #616161;
@@ -23,6 +25,8 @@
 
 @media (max-width: 600px) {
 	.register-dialog {
+		height: 455px;
+
 		.sticky-container {
 			padding-top: 0;
 		}
@@ -47,6 +51,7 @@
 /* Sign In Dialog */
 
 .sign-in-dialog {
+	height: 322px;
 
 	h4 {
 		margin-top: 4px;
@@ -70,6 +75,7 @@
 
 @media (max-width: 600px) {
 	.sign-in-dialog {
+		height: 455px;
 
 		md-content {
 			height: 344px;
